--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "bootstrap": "^5.3.7",
     "cors": "^2.8.5",
     "cra-template-pwa": "2.0.0",
     "dotenv": "^17.0.0",
