--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.7",
+    "bootstrap-icons": "^1.13.1",
     "cors": "^2.8.5",
     "cra-template-pwa": "2.0.0",
     "dotenv": "^17.0.0",
