--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:backend": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:5000",
   "eslintConfig": {
     "extends": [
       "react-app",
