--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
     "multer": "^2.0.1",
+    "nodemailer": "^7.0.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
+    "sanitize-html": "^2.17.0",
     "web-vitals": "^5.0.3"
   },
   "scripts": {
