--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
+    "react-window": "^1.8.11",
     "sanitize-html": "^2.17.0",
     "web-vitals": "^5.0.3"
   },
