--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-scripts": "5.0.1",
     "react-window": "^1.8.11",
     "sanitize-html": "^2.17.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "web-vitals": "^5.0.3"
   },
   "scripts": {
