--- a/package.json
+++ b/package.json
@@ -23,7 +23,13 @@
     "sanitize-html": "^2.17.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
-    "web-vitals": "^5.0.3"
+    "web-push": "^3.6.7",
+    "web-vitals": "^5.0.3",
+    "workbox-core": "^7.3.0",
+    "workbox-expiration": "^7.3.0",
+    "workbox-precaching": "^7.3.0",
+    "workbox-routing": "^7.3.0",
+    "workbox-strategies": "^7.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
