Mise à jour des fichiers

--- a/.env
+++ b/.env
@@ -8,3 +8,8 @@ VAPID_PRIVATE_KEY=9ANfVaVsGYtCPTyscbouGoRJk5bTkXjGN4640gKjxHA
 
 REACT_APP_VAPID_PUBLIC_KEY=BJmBKd8USI2gbD1NKX8HJzkyL13W4NnGHS-7fWWSo1NvdJx3V5GiXfcVSU6MtcBbWw1BnelktpeNqJaxayl5yxk
 PORT=3000
+
+
+CLOUDINARY_CLOUD_NAME=belikan
+CLOUDINARY_API_KEY=421758471413187
+CLOUDINARY_API_SECRET=qSDbRUitilKm3P0qojpKfrpPkhg
