Mise à jour des fichiers

--- a/.env
+++ b/.env
@@ -11,5 +11,6 @@ PORT=3000
 
 
 CLOUDINARY_CLOUD_NAME=belikan
-CLOUDINARY_API_KEY=421758471413187
+CLOUDINARY_API_KEY=649994714975435
 CLOUDINARY_API_SECRET=qSDbRUitilKm3P0qojpKfrpPkhg
+CLOUDINARY_URL=cloudinary://649994714975435:qSDbRUitilKm3P0qojpKfrpPkhg@belikan
