--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
+    "body-parser": "^2.2.0",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
     "chart.js": "^4.5.0",
@@ -12,12 +13,13 @@
     "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "cra-template-pwa": "2.0.0",
-    "dotenv": "^17.0.0",
+    "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "googleapis": "^152.0.0",
     "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.2",
+    "mongoose": "^8.16.3",
     "multer": "^1.4.5-lts.1",
     "multer-gridfs-storage": "^5.0.2",
     "nodemailer": "^7.0.5",
@@ -33,6 +35,7 @@
     "sanitize-html": "^2.17.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "tronweb": "^6.0.3",
     "web-push": "^3.6.7",
     "web-vitals": "^5.0.3",
     "workbox-core": "^7.3.0",
