--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "googleapis": "^152.0.0",
     "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.525.0",
     "mongoose": "^8.16.3",
     "multer": "^1.4.5-lts.1",
     "multer-gridfs-storage": "^5.0.2",
@@ -28,6 +29,7 @@
     "react-bootstrap": "^2.10.10",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
