--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "cra-template-pwa": "2.0.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.1",
     "express-session": "^1.18.1",
     "googleapis": "^152.0.0",
     "gridfs-stream": "^1.1.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
     "mongoose": "^8.16.3",
@@ -44,7 +46,8 @@
     "workbox-expiration": "^7.3.0",
     "workbox-precaching": "^7.3.0",
     "workbox-routing": "^7.3.0",
-    "workbox-strategies": "^7.3.0"
+    "workbox-strategies": "^7.3.0",
+    "zod": "^4.0.5"
   },
   "scripts": {
     "start": "concurrently \"npm run client\" \"npm run server\"",
